update to Scala 2.12 recent snapshot