@@ -1,2 +1,2 @@
-export SBT_OPTS="-Xmx1536M -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=2G -Xss2M  -Duser.timezone=GMT -Xss20M"
+export SBT_OPTS="-Xmx1536M  -Xss13M"
 sbt
